[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Level_Sel.gd" type="Script" id=1]

[node name="Level Sel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="back" type="Button" parent="."]
margin_left = 13.0
margin_top = 15.0
margin_right = 76.0
margin_bottom = 48.0
text = "Title Screen"

[node name="Level 1" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 68.0
margin_top = -42.0
margin_right = 126.0
margin_bottom = -22.0
text = "Level 1"

[node name="Level 2" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 165.0
margin_top = -42.0
margin_right = 223.0
margin_bottom = -22.0
text = "Level 2"

[node name="Level 3" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 259.0
margin_top = -42.0
margin_right = 317.0
margin_bottom = -22.0
text = "Level 3"

[node name="Level 4" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 353.0
margin_top = -42.0
margin_right = 411.0
margin_bottom = -22.0
text = "Level 4"

[node name="Level 5" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 443.0
margin_top = -42.0
margin_right = 501.0
margin_bottom = -22.0
text = "Level 5"

[node name="Level 6" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 68.0
margin_top = 48.0
margin_right = 126.0
margin_bottom = 68.0
text = "Test Level"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="Level 4" to="." method="_on_Level_4_pressed"]
[connection signal="pressed" from="Level 5" to="." method="_on_Level_5_pressed"]
[connection signal="pressed" from="Level 6" to="." method="_on_Level_6_pressed"]
