extends Control





func _on_back_pressed():
	get_tree().change_scene("res://Scenes/Title Test.tscn")
	pass # Replace with function body.


func _on_Level_1_pressed():
	pass # Replace with function body.


func _on_Level_2_pressed():
	pass # Replace with function body.


func _on_Level_3_pressed():
	pass # Replace with function body.


func _on_Level_4_pressed():
	pass # Replace with function body.


func _on_Level_5_pressed():
	pass # Replace with function body.


func _on_Level_6_pressed():
	get_tree().change_scene("res://Scenes/Testlevel.tscn")
	pass # Replace with function body.
