extends Control





func _on_back_pressed():
	get_tree().change_scene_to_file("res://Scenes/Title Test.tscn")
	pass # Replace with function body.


func _on_Level_1_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/Original Levels/Level 1.tscn")
	pass # Replace with function body.


func _on_Level_2_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/Original Levels/Level 2.tscn")
	pass # Replace with function body.


func _on_Level_3_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/Original Levels/Level 3.tscn")
	pass # Replace with function body.


func _on_Level_4_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/Original Levels/Level 4.tscn")
	pass # Replace with function body.


func _on_Level_5_pressed():
	get_tree().change_scene_to_file("res://Scenes/Levels/Original Levels/Level 5.tscn")
	pass # Replace with function body.


func _on_Level_6_pressed():
	get_tree().change_scene_to_file("res://Scenes/Testlevel.tscn")
	pass # Replace with function body.
